# Romeo

./: README 2.md
RomeoCode/: CMakeLists.txt  ereaseDBData.sql  main.cpp  my.rc  my.res  selectAll.sql  utils.cpp  utils.h
RomeoCode/controller/: acontroller.cpp  acontroller.h  analysiscontroller.cpp  analysiscontroller.h  controllermanager.cpp  controllermanager.h  datasetscontroller.cpp  datasetscontroller.h  detailedresultcontroller.cpp  detailedresultcontroller.h  groupscontroller.cpp  groupscontroller.h  mainwindowcontroller.cpp  mainwindowcontroller.h  newdatasetcontroller.cpp  newdatasetcontroller.h  newgroupcontroller.cpp  newgroupcontroller.h  newprotocolcontroller.cpp  newprotocolcontroller.h  newsubjectcontroller.cpp  newsubjectcontroller.h  protocolscontroller.cpp  protocolscontroller.h  resultscontroller.cpp  resultscontroller.h  subjectscontroller.cpp  subjectscontroller.h  welcomecontroller.cpp  welcomecontroller.h
RomeoCode/img/: images.qrc  romeoLogo.icns
RomeoCode/model/core/: RegionIterator.h  algcreator.cpp  algcreator.h  analysis.cpp  analysis.h  asubject.cpp  asubject.h  dataset.cpp  dataset.h  featcreator.cpp  featcreator.h  groupofsubject.cpp  groupofsubject.h  internaldata.cpp  internaldata.h  internaldata2d.cpp  internaldata2d.h  internaldata3d.cpp  internaldata3d.h  isubject.cpp  isubject.h  protocol.cpp  protocol.h  proxysubject.cpp  proxysubject.h  realsubject.cpp  realsubject.h  realsubjectimage.cpp  realsubjectimage.h  realsubjectvideo.cpp  realsubjectvideo.h  rgbimage.h  rgbimage2d.cpp  rgbimage2d.h  rgbimage3d.cpp  rgbimage3d.h  romeoobject.cpp  romeoobject.h  video.cpp  video.h  (+4 more)
RomeoCode/model/core/algorithm/: aalgorithm.cpp  aalgorithm.h  clustercentroid.cpp  clustercentroid.h  clustercentroid2d.cpp  clustercentroid2d.h  clustercentroid3d.cpp  clustercentroid3d.h  clusterpoint.cpp  clusterpoint.h  clusterpoint2d.cpp  clusterpoint2d.h  clusterpoint3d.cpp  clusterpoint3d.h  fuzzycmeans.cpp  fuzzycmeans.h  fuzzycmeans3d.cpp  fuzzycmeans3d.h  fuzzycmeansalgorithm.cpp  fuzzycmeansalgorithm.h  kmeansalgorithm.cpp  kmeansalgorithm.h
RomeoCode/model/core/feature/: afeature.cpp  afeature.h  areaundercurvefeature.cpp  areaundercurvefeature.h  averagefeature.cpp  averagefeature.h  contrastfeature.cpp  contrastfeature.h  correlationfeature.cpp  correlationfeature.h  dynamicfeature.cpp  dynamicfeature.h  energyfeature.cpp  energyfeature.h  entropyfeature.cpp  entropyfeature.h  firstorderfeature.cpp  firstorderfeature.h  fuzzycmeansalgorithm.cpp  fuzzycmeansalgorithm.h  homogeneityfeature.cpp  homogeneityfeature.h  kurtosisfeature.cpp  kurtosisfeature.h  maximumfeature.cpp  maximumfeature.h  meandynamicfeature.cpp  meandynamicfeature.h  meanfeature.cpp  meanfeature.h  minimumfeature.cpp  minimumfeature.h  secondorderfeature.cpp  secondorderfeature.h  skewnessfeature.cpp  skewnessfeature.h  standarddeviationfeature.cpp  standarddeviationfeature.h
RomeoCode/model/help/: assistant.cpp  assistant.h
RomeoCode/model/help/documentation/: analysisdetails.html  analysisresult.html  createdataset.html  creategroup.html  createprotocol.html  createsubject.html  doc.qch  doc.qhc  doc.qhcp  doc.qhp  index.html  visualizedataset.html  visualizegroup.html  visualizeprotocol.html  visualizesubject.html
RomeoCode/model/qtModel/: analysisprotocolstablemodel.cpp  analysisprotocolstablemodel.h  analysissubjectstablemodel.cpp  analysissubjectstablemodel.h  datasetgrouptablemodel.cpp  datasetgrouptablemodel.h  datasetprotocoltablemodel.cpp  datasetprotocoltablemodel.h  datasetstablemodel.cpp  datasetstablemodel.h  groupsubjectstablemodel.cpp  groupsubjectstablemodel.h  grouptablemodel.cpp  grouptablemodel.h  newgrouptablemodel.cpp  newgrouptablemodel.h  newprotocolfeaturetablemodel.cpp  newprotocolfeaturetablemodel.h  protocoltablemodel.cpp  protocoltablemodel.h  resultstablemodel.cpp  resultstablemodel.h  subjecttablemodel.cpp  subjecttablemodel.h  tablemodel.cpp  tablemodel.h
RomeoCode/model/util/dao/: Romeo.sql  adatabase.cpp  adatabase.h  algorithmdao.cpp  algorithmdao.h  analysisdao.cpp  analysisdao.h  datasetdao.cpp  datasetdao.h  featuredao.cpp  featuredao.h  groupdao.cpp  groupdao.h  protocoldao.cpp  protocoldao.h  subjectdao.cpp  subjectdao.h
RomeoCode/model/util/exporterModel/: exporter.cpp  exporter.h  exporter2d.cpp  exporter2d.h  exporter3d.cpp  exporter3d.h
RomeoCode/model/util/log/: log.cpp  log.h
RomeoCode/model/util/readerModel/: imagereader.cpp  imagereader.h  reader.cpp  reader.h  videoreader.cpp  videoreader.h
RomeoCode/style/: analysis.css  datasets.css  default.css  protocols.css  style.qrc  subjects.css  toolbar.css  welcome.css
RomeoCode/view/component/: imagelabel.cpp  imagelabel.h  navwidget.cpp  navwidget.h  resultmessagewidget.cpp  resultmessagewidget.h  selectdeselectwidget.cpp  selectdeselectwidget.h  toolbar.cpp  toolbar.h
RomeoCode/view/dialog/: analysisdialog.cpp  analysisdialog.h  dialog.cpp  dialog.h  featureparams.cpp  featureparams.h
RomeoCode/view/window/: analysisview.cpp  analysisview.h  apanel.cpp  apanel.h  datasetsview.cpp  datasetsview.h  detailedresult.cpp  detailedresult.h  groupview.cpp  groupview.h  mainwindow.cpp  mainwindow.h  newdatasetview.cpp  newdatasetview.h  newgroupview.cpp  newgroupview.h  newprotocolview.cpp  newprotocolview.h  newsubjectview.cpp  newsubjectview.h  protocolsview.cpp  protocolsview.h  resultsview.cpp  resultsview.h  subjectsview.cpp  subjectsview.h  welcomeview.cpp  welcomeview.h
